package com.bsuir.adhubbackand.model.enums;

public enum UserStatus {
    ACTIVE,
    BLOCKED,
    DELETED
}
